@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 ### Changed
 - Updated controllers to remove deprecated use of modAction
 - Updated installer and package builder to remove deprecated use of modAction
+- Removed fileuploadfield.js utility (already included with MODX > 2.3)
 
 ## [1.5.1-pl2] - 2018-07-26
 ### Fixed
